<resources>
    <string name="app_name">OikoHelp</string>
    <string name="title_activity_maps">Map</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="check">Lembrar conta</string>
    <string name="cadastro">Ainda não se cadastrou ?</string>
    <string name="search">Procurar</string>
    <string name="hint_search">Buscar pontos de coleta</string>
    <string name="locais">Locais</string>
    <string name="videos">Videos</string>
    <string name="conta">Conta</string>
    <string name="header_videos">Dicas</string>
    <string name="preload">Preload</string>

    <!--   Name of Screens -->
    <string name="preload_screen">Preload</string>
    <string name="login_screen">Login</string>
    <string name="home_screen">Login</string>
    <string name="decide_screen">Login</string>
    <string name="cad_user_screen">Login</string>
    <string name="cad_pev_screen">Login</string>

    <!--  Buttons Dialog -->
    <string name="button_negative">Não</string>
    <string name="button_positive">Sim</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>