<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:elevation="2dp">

        <EditText
            android:id="@+id/txt_search"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:autofillHints="@string/email"
            android:background="@drawable/input_search_border"
            android:fontFamily="@font/rasa"
            android:hint="@string/hint_search"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:textSize="20dp" />

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/search_border"
            android:contentDescription="@string/search"
            android:elevation="2dp"
            android:foreground="@drawable/ic_baseline_search_24" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         />
</FrameLayout>