<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackground"
    tools:context=".ui.ScreenLogin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="284dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:autofillHints="@string/email"
                        android:background="@drawable/input_border"
                        android:fontFamily="@font/rasa"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="15dp"
                        android:textAlignment="center"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:autofillHints="@string/email"
                        android:background="@drawable/input_border"
                        android:ems="10"
                        android:fontFamily="@font/rasa"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:textAlignment="center"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rasa_bold"
                android:padding="10dp"
                android:text="@string/check"
                android:textColor="@color/primaryText"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_border"
                android:fontFamily="@font/rasa_bold"
                android:padding="8dp"
                android:shadowColor="#050505"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/primaryBackground"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/newCad"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:fontFamily="@font/rasa_bold"
                android:text="@string/cadastro"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>